# py-sdk

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: python.yml
.husky/: pre-push
jsonbank/: __init__.py  client.py  errors.py  functions.py  structs.py
tests/: conftest.py  test_00_public.py  test_01_authenticated.py  test_functions.py
