[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonbank"
version = "0.1.0"
description = "JsonBank.io Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "jsonbankio", email = "hello@trapcode.io" }]
keywords = ["jsonbank", "json", "sdk", "api", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
dev = ["pytest>=7", "python-dotenv>=1.0", "build", "twine"]

[project.urls]
Homepage = "https://docs.jsonbank.io/sdks/python"
Documentation = "https://docs.jsonbank.io/sdks/python"
Repository = "https://github.com/jsonbankio/py-sdk"

[tool.hatch.build.targets.wheel]
packages = ["jsonbank"]
